# gitops-actions

.github/workflows/: release.yml
auto-promote-action/: Dockerfile  README.md  action.yaml  action.yml  test.yml
auto-promote-action/auto-promote/: Cargo.toml
auto-promote-action/auto-promote/src/: cli.rs  config.rs  git.rs  glob.rs  hcl.rs  main.rs  pr.rs
auto-promote-action/hcl-tweak/: go.mod  main.go
auto-promote-action/hcl-tweak/cli/: array_flag.go  key_value_array_flag.go
auto-promote-action/hcl-tweak/hcl/: attribute.go  block.go  file.go
auto-promote-action/hcl-tweak/types/: key_value_pair.go
