[package]
name = "auto-promote"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1.17", features = ["full"] }
git2 = "0.14"
octocrab = "0.15"
regex = "1.5"
uuid = { version = "0.8", features = ["v4" ] }