[package]
name = "auto-promote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
git2 = "0.14"
glob = "0.3.0"
octocrab = "0.15"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1.17", features = ["full"] }
uuid = { version = "0.8", features = ["v4" ] }